tests/ui/send-future-endpoint-alias.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/ui/send-future-endpoint-alias.rs:37:20
   |
37 |     endpoint: &mut Endpoint<'r, 0, SessionKit<'cfg, T, U, C, MAX_RV>>,
   |                    ^^^^^^^^      ----------------------------------- help: remove the unnecessary generic argument
   |                    |
   |                    expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `ROLE`
  --> src/endpoint.rs
   |
   | pub struct Endpoint<'r, const ROLE: u8> {
   |            ^^^^^^^^     --------------

error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/send-future-endpoint-alias.rs:46:23
   |
44 |     let flow = endpoint.flow::<g::Msg<7, Payload>>().unwrap();
   |                -------- first mutable borrow occurs here
45 |     let send = flow.send(&Payload(1));
46 |     let _flow_again = endpoint.flow::<g::Msg<7, Payload>>().unwrap();
   |                       ^^^^^^^^ second mutable borrow occurs here
47 |     let _ = send;
   |             ---- first borrow later used here
   |
note: this call may capture more lifetimes than intended, because Rust 2024 has adjusted the `impl Trait` lifetime capture rules
  --> tests/ui/send-future-endpoint-alias.rs:45:16
   |
45 |     let send = flow.send(&Payload(1));
   |                ^^^^^^^^^^^^^^^^^^^^^^
help: if you can modify this crate, add a precise capturing bound to avoid overcapturing: `+ use<'a, A, O, ROLE, M>`
  --> src/endpoint/flow.rs
   |
   |     ) -> impl Future<Output = SendResult<O>> + 'a
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
